1.added certificate class and added it to index.md;2. added width and text align to certifications; 3. added a calc to width of header and footer to correct padding space

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -41,7 +41,7 @@ header,footer {
   border-color: #b5e853;
   box-shadow:0 1px 8px rgba(181,232,83,0.1);
   background:#151515 url("../images/bkg.png") 0 0;
-  width:100%;
+  width:calc(100% - 25px);
   border-left:0px;
   border-right:0px;
   padding:25px 0px 0px 20px; }
